# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

declare_args() {
  window_manager_dayu200_resource_config = true
}

declare_args() {
  window_manager_dayu210_resource_config = true
}

ohos_prebuilt_etc("window_manager_config") {
  if (is_emulator) {
    source = "./other/window_manager_config.xml"
    install_enable = false
  } else if (window_manager_dayu200_resource_config) {
    source = "./rk3568/window_manager_config.xml"
    install_enable = true
  } else if (window_manager_dayu210_resource_config) {
    source = "./rk3588/window_manager_config.xml"
    install_enable = true
  } else {
    source = "./other/window_manager_config.xml"
    install_enable = false
  }
  part_name = "window_manager"
  subsystem_name = "window"
  relative_install_dir = "window/resources"
}

ohos_prebuilt_etc("display_manager_config") {
  if (is_emulator) {
    source = "./other/display_manager_config.xml"
    install_enable = false
  } else if (window_manager_dayu200_resource_config) {
    source = "./rk3568/display_manager_config.xml"
    install_enable = true
  } else if (window_manager_dayu210_resource_config) {
    source = "./rk3588/display_manager_config.xml"
    install_enable = true
  } else {
    source = "./other/display_manager_config.xml"
    install_enable = false
  }
  part_name = "window_manager"
  subsystem_name = "window"
  relative_install_dir = "window/resources"
}

group("window_config") {
  deps = [
    ":display_manager_config",
    ":window_manager_config",
  ]
}
