# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("demo") {
  testonly = true

  deps = [
    ":demo_mirror_screen_listener",
    ":demo_screenshot_listener",
  ]
}

ohos_executable("demo_mirror_screen_listener") {
  install_enable = true
  sources = [ "demo_mirror_screen_listener.cpp" ]

  include_dirs =
      [ "//foundation/window/window_manager/test/common/utils/include" ]

  deps = [
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_base:librender_service_base",
    "//foundation/window/window_manager/dm:libdm",
  ]

  external_deps = [ "c_utils:utils" ]

  part_name = "window_manager"
  subsystem_name = "window"
}

ohos_executable("demo_screenshot_listener") {
  install_enable = true
  sources = [ "demo_screenshot_listener.cpp" ]

  include_dirs =
      [ "//foundation/window/window_manager/test/common/utils/include" ]

  deps = [
    "//foundation/window/window_manager/dm:libdm",
    "//foundation/window/window_manager/utils:libwmutil",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog_native:libhilog",
    "multimedia_image_standard:image_native",
  ]

  part_name = "window_manager"
  subsystem_name = "window"
}
