# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../windowmanager_aafwk.gni")

group("demo") {
  testonly = true

  deps = [
    ":demo_freeze_display",
    ":demo_mirror_screen_listener",
    ":demo_screenshot_listener",
    ":demo_snapshot_virtual_screen",
    ":demo_system_sub_window",
    ":demo_water_mark_listener",
  ]
}

ohos_executable("demo_mirror_screen_listener") {
  sources = [ "demo_mirror_screen_listener.cpp" ]

  include_dirs = [ "../common/utils/include" ]

  deps = [
    "${window_base_path}/dm:libdm",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_base:librender_service_base",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  part_name = "window_manager"
  subsystem_name = "window"
}

ohos_executable("demo_screenshot_listener") {
  sources = [ "demo_screenshot_listener.cpp" ]

  include_dirs = [ "../common/utils/include" ]

  deps = [
    "${window_base_path}/dm:libdm",
    "${window_base_path}/utils:libwmutil",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "image_framework:image_native",
  ]

  part_name = "window_manager"
  subsystem_name = "window"
}

ohos_executable("demo_snapshot_virtual_screen") {
  sources = [ "demo_snapshot_virtual_screen.cpp" ]

  include_dirs = [
    "../../interfaces/innerkits/dm",
    "../../snapshot/include",
    "../../utils/include",
    "../../dmserver/include",
    "../../dm/include",
  ]

  deps = [
    "${window_base_path}/dm:libdm_static",
    "${window_base_path}/utils:libwmutil_static",
    "../../snapshot:libsnapshot_util",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_client:librender_service_client",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  part_name = "window_manager"
  subsystem_name = "window"
}

ohos_executable("demo_system_sub_window") {
  sources = [ "demo_system_sub_window.cpp" ]

  include_dirs = [
    "../../interfaces/innerkits/wm",
    "../common/utils/include",
  ]

  deps = [
    "${window_base_path}/wm:libwm",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_base:librender_service_base",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  part_name = "window_manager"
  subsystem_name = "window"
}

ohos_executable("demo_freeze_display") {
  sources = [ "demo_freeze_display.cpp" ]

  include_dirs = [
    "../../interfaces/innerkits/dm",

    # pixel_map.h
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
  ]
  deps = [ "${window_base_path}/dm:libdm" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "image_framework:image_native",
  ]
  part_name = "window_manager"
  subsystem_name = "window"
}

ohos_executable("demo_water_mark_listener") {
  sources = [ "demo_water_mark_listener.cpp" ]

  include_dirs = [
    "${window_base_path}/interfaces/innerkits/wm",
    "${window_base_path}/test/common/utils/include",
  ]

  deps = [
    "${graphic_base_path}/graphic_2d/rosen/modules/render_service_base:librender_service_base",
    "${window_base_path}/wm:libwm",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  part_name = "window_manager"
  subsystem_name = "window"
}

ohos_executable("demo_session_manager") {
  sources = [ "demo_session_manager.cpp" ]

  include_dirs = [
    "${window_base_path}/interfaces/innerkits/wm",
    "${window_base_path}/interfaces/innerkits/dm",
    "${window_base_path}/test/common/utils/include",
    "${window_base_path}/window_scene/session_manager/include",
    "${window_base_path}/window_scene/session_manager_service/include",
    "${window_base_path}/wm/include",
  ]

  deps = [
    "${graphic_base_path}/graphic_2d/rosen/modules/render_service_base:librender_service_base",
    "${window_base_path}/dm:libdm",
    "${window_base_path}/window_scene/session_manager:session_manager",
    "${window_base_path}/wm:libwm",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]

  part_name = "window_manager"
  subsystem_name = "window"
}
