# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

## Build wmdebug {{{
config("wmdebug_config") {
  include_dirs = [
    "include",
    "//foundation/windowmanager/wmserver/include",
    "//foundation/windowmanager/interfaces/innerkits/wm",
    "//foundation/windowmanager/utils/include",
    "//foundation/windowmanager/wm/include",
    "//utils/native/base/include",
  ]
}

ohos_executable("wmdebug") {
  install_enable = true
  sources = [
    "src/main.cpp",
    "src/window_manager_debug_command.cpp"
  ]

  configs = [ ":wmdebug_config" ]


  deps = [
    "//foundation/windowmanager/dm:libdm",
    "//foundation/windowmanager/wm:libwm",
    "//foundation/windowmanager/utils:libwmutil",
    "//utils/native/base:utils"
  ]
  external_deps = [
    "ipc:ipc_core",
    "utils_base:utils",
    "hilog_native:libhilog",
  ]
  part_name = "window_manager"
  subsystem_name = "window"
}
group("tools_wmdebug") {
  deps = [ ":wmdebug" ]
}
## Build wmdebug }}}