# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/window/window_manager/windowmanager_aafwk.gni")
config("libwscommon_public_config") {
  include_dirs = [
    "${window_base_path}/window_scene",

    # for window_manager_hilog
    "${window_base_path}/utils/include",
  ]
}

## Build libwindow_scene_common.so
ohos_shared_library("window_scene_common") {
  sources = [ "src/message_scheduler.cpp" ]

  public_configs = [ ":libwscommon_public_config" ]

  external_deps = [
    "eventhandler:libeventhandler",
    "hilog_native:libhilog",
  ]
  part_name = "window_manager"
  subsystem_name = "window"
}
